# llm-resources

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_evaluation.ipynb  02_anyscale_endpoints.ipynb  02_rag_pipeline_anyscale.ipynb  03_tabluar_data.ipynb
