[tool.poetry]
name = "llm-resources"
version = "0.1.0"
description = ""
authors = ["jlondonobo <j.londonobo@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_resources"}]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "0.8.40"
langchain = ">=0.0.303"
chromadb = "^0.4.13"
pandas = "<=2.1.1"
sentence-transformers = "^2.2.2"
python-dotenv = "^1.0.0"
unstructured = "^0.10.19"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
iprogress = "^0.4"
ipywidgets = "^8.1.1"
widgetsnbextension = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
